@@ -1,0 +1,18 @@
+# Generated by Django 2.1.7 on 2019-03-27 20:07
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0005_auto_20190312_2015'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='homework',
+            name='file',
+            field=models.FileField(blank=True, upload_to='homework'),
+        ),
+    ]
