@@ -1,0 +1,28 @@
+# Generated by Django 2.1.7 on 2019-03-27 20:20
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('courses', '0007_auto_20190327_2011'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='course',
+            name='description',
+            field=models.TextField(blank=True),
+        ),
+        migrations.AlterField(
+            model_name='quiz',
+            name='file',
+            field=models.FileField(blank=True, upload_to='quizes'),
+        ),
+        migrations.AlterField(
+            model_name='survey',
+            name='file',
+            field=models.FileField(blank=True, upload_to='surveys'),
+        ),
+    ]
